# RWEFM

./: README.md  pyproject.toml
examples/: hyperbolic_letter_x.ipynb  spherical_mnist_3.ipynb
src/riemannianwassersteinflowmatching/: RiemannianWassersteinFlowMatching.py  __init__.py
